--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,7 @@ NODE_ENV=development
 # MongoDB Connection
 MONGODB_URI=mongodb://localhost:27017/aion
 # For MongoDB Atlas:
-# MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/aion?retryWrites=true&w=majority
-
+# MONGODB_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<dbname>?retryWrites=true&w=majority
 # OpenAI API Configuration
 OPENAI_API_KEY=your-openai-api-key-here
 OPENAI_MODEL=gpt-4
