--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,9 +19,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+              working-directory: frontend
 
       - name: Build frontend
         run: npm run build
+              working-directory: frontend
 
       - name: Verify build
         run: bash scripts/verify-build.sh
