--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -18,9 +18,11 @@ jobs:
 
       - name: Install
         run: npm install
+              working-directory: frontend
 
       - name: Build
         run: npm run build
+              working-directory: frontend
 
       - name: Deploy
         run: bash scripts/deploy.sh prod
