--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.8",
     "eslint": "^8.55.0",
-    "eslint-plugin-react": "^7.33.2"
+    "eslint-plugin-react": "^7.33.2",
+    "terser": "^5.27.0"
   },
   "keywords": ["ai", "chat", "search", "voice", "react"],
   "author": "AION Team",
