--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,5 @@ jobs:
         working-directory: frontend
 
       - name: Verify build
-        run: bash scripts/verify-build.sh
-
+        run: bash ../scripts/verify-build.sh
+        working-directory: frontend
