fix: Remove EC2KeyName from EB config to allow deployment

--- a/backend/.ebextensions/01-nodejs.config
+++ b/backend/.ebextensions/01-nodejs.config
@@ -2,7 +2,7 @@
 # This file configures the Node.js environment for AION backend
 
 option_settings:
-  # Node.js Platform Settings
+  ## Node.js Platform Settings
   aws:elasticbeanstalk:container:nodejs:
     NodeCommand: "npm start"
     NodeVersion: "18"
@@ -19,8 +19,7 @@ option_settings:
   aws:autoscaling:launchconfiguration:
     InstanceType: t3.small
     IamInstanceProfile: aws-elasticbeanstalk-ec2-role
-    EC2KeyName: aion-backend-key
-
+    
   # Auto Scaling
   aws:autoscaling:asg:
     MinSize: 1
