--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://Aion-backend-env.eba-4uswimrs.us-east-1.elasticbeanstalk.com/api
+VITE_API_URL=https://aion-backend-env-1.eba-4uswimrs.us-east-1.elasticbeanstalk.com/api
 VITE_NODE_ENV=production
