fix: CRITICAL - Change API URL from HTTPS to HTTP to fix mixed content policy
HOTFIX: Backend on Elastic Beanstalk only responds to HTTP
Frontend was using HTTPS causing mixed content errors
Changed VITE_API_URL to use HTTP protocol
This fixes: Error: Failed to fetch

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=https://aion-backend-env-1.eba-4uswimrs.us-east-1.elasticbeanstalk.com/api
-VITE_NODE_ENV=production
+VITE_API_URL=http://aion-backend-env-1.eba-4uswimrs.us-east-1.elasticbeanstalk.com/api
+VITE_MODE_ENV=production
