--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "openai": "^4.24.1",
     "axios": "^1.6.2",
     "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "http-proxy-middleware": "^2.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
