ci: Add frontend build step to deployment workflow
This adds the necessary npm install and npm run build steps for the React frontend to generate the dist folder needed for the shadow routing feature.

Changes:
- Added 'Build frontend' step before 'Create deployment package'
- Frontend dist will be included in backend-deploy.zip
- Enables zero-downtime deployment with new UI on /__aion_shadow/ui path

--- a/.github/workflows/deploy-backend-eb.yml
+++ b/.github/workflows/deploy-backend-eb.yml
@@ -20,6 +20,13 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+
+           - name: Build frontend
+   run: |
+     cd backend/frontend
+     npm install
+     npm run build
+     cd ..
       
       - name: Create deployment package
         run: |
