--- a/.github/workflows/deploy-backend-eb.yml
+++ b/.github/workflows/deploy-backend-eb.yml
@@ -34,11 +34,9 @@ jobs:
       - name: Deploy to Elastic Beanstalk
         uses: einaregilsson/beanstalk-deploy@v22
         with:
-          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          application_name: aion-backend
-          environment_name: Aion-backend-env-1
-          version_label: backend-${{ steps.timestamp.outputs.time }}-${{ github.sha }}
+           ${{ secrets.AWS_ACCESS_KEY_ID }}
+    aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}          application_name: aion-backend
+    environment_name: aion-backend-env-1          version_label: backend-${{ steps.timestamp.outputs.time }}-${{ github.sha }}
           region: us-east-1
           deployment_package: backend-deploy.zip
           wait_for_deployment: true
@@ -47,5 +45,4 @@ jobs:
       - name: Deployment complete
         run: |
           echo "✅ Backend deployed successfully to Elastic Beanstalk!"
-          echo "🌐 URL: http://Aion-backend-env-1.eba-4uswimrs.us-east-1.elasticbeanstalk.com"
-          echo "📦 Version: backend-${{ steps.timestamp.outputs.time }}-${{ github.sha }}"
+    echo "🌐 URL: http://aion-backend-env-1.eba-4uswimrs.us-east-1.elasticbeanstalk.com"          echo "📦 Version: backend-${{ steps.timestamp.outputs.time }}-${{ github.sha }}"
