--- a/.github/workflows/deploy-backend-eb.yml
+++ b/.github/workflows/deploy-backend-eb.yml
@@ -35,8 +35,10 @@ jobs:
         uses: einaregilsson/beanstalk-deploy@v22
         with:
            ${{ secrets.AWS_ACCESS_KEY_ID }}
-    aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}          application_name: aion-backend
-    environment_name: aion-backend-env-1          version_label: backend-${{ steps.timestamp.outputs.time }}-${{ github.sha }}
+    aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}          
+          application_name: aion-backend
+    environment_name: aion-backend-env-1          
+          version_label: backend-${{ steps.timestamp.outputs.time }}-${{ github.sha }}
           region: us-east-1
           deployment_package: backend-deploy.zip
           wait_for_deployment: true
